Before db update

--- a/Notebooks/CauseOfDDeathAge.ipynb
+++ b/Notebooks/CauseOfDDeathAge.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [
     {
@@ -100,7 +100,7 @@
        " 'Wyoming': 'WY'}"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 171,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -15550,7 +15550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 166,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15582,7 +15582,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 167,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15598,7 +15598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 168,
    "metadata": {},
    "outputs": [
     {
@@ -18238,11 +18238,257 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 169,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>State</th>\n",
+       "      <th>State Code</th>\n",
+       "      <th>ICD-10 113 Cause List</th>\n",
+       "      <th>Ten-Year Age Groups</th>\n",
+       "      <th>Ten-Year Age Groups Code</th>\n",
+       "      <th>Deaths</th>\n",
+       "      <th>Population</th>\n",
+       "      <th>Crude Rate</th>\n",
+       "      <th>Rate</th>\n",
+       "      <th>Child_Adj_Rate</th>\n",
+       "      <th>common_name</th>\n",
+       "      <th>children</th>\n",
+       "      <th>parents</th>\n",
+       "      <th>Start Age</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>20891</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>5-14 years</td>\n",
+       "      <td>5-14</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>608466.0</td>\n",
+       "      <td>Unreliable</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>1.64</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20892</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>15-24 years</td>\n",
+       "      <td>15-24</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>635707.0</td>\n",
+       "      <td>14.8</td>\n",
+       "      <td>14.79</td>\n",
+       "      <td>14.79</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>15</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20893</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>25-34 years</td>\n",
+       "      <td>25-34</td>\n",
+       "      <td>129.0</td>\n",
+       "      <td>647229.0</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>19.93</td>\n",
+       "      <td>19.93</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>25</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20894</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>35-44 years</td>\n",
+       "      <td>35-44</td>\n",
+       "      <td>157.0</td>\n",
+       "      <td>593306.0</td>\n",
+       "      <td>26.5</td>\n",
+       "      <td>26.46</td>\n",
+       "      <td>26.46</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>35</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20895</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>45-54 years</td>\n",
+       "      <td>45-54</td>\n",
+       "      <td>137.0</td>\n",
+       "      <td>616616.0</td>\n",
+       "      <td>22.2</td>\n",
+       "      <td>22.22</td>\n",
+       "      <td>22.22</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>45</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20896</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>55-64 years</td>\n",
+       "      <td>55-64</td>\n",
+       "      <td>119.0</td>\n",
+       "      <td>657667.0</td>\n",
+       "      <td>18.1</td>\n",
+       "      <td>18.09</td>\n",
+       "      <td>18.09</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>55</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20897</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>65-74 years</td>\n",
+       "      <td>65-74</td>\n",
+       "      <td>84.0</td>\n",
+       "      <td>501447.0</td>\n",
+       "      <td>16.8</td>\n",
+       "      <td>16.75</td>\n",
+       "      <td>16.75</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>65</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20898</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>75-84 years</td>\n",
+       "      <td>75-84</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>256847.0</td>\n",
+       "      <td>19.9</td>\n",
+       "      <td>19.86</td>\n",
+       "      <td>19.86</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>75</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>20899</th>\n",
+       "      <td>Alabama</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>#Intentional self-harm (suicide) (*U03,X60-X84...</td>\n",
+       "      <td>85+ years</td>\n",
+       "      <td>85+</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>91543.0</td>\n",
+       "      <td>25.1</td>\n",
+       "      <td>25.12</td>\n",
+       "      <td>25.12</td>\n",
+       "      <td>Suicide</td>\n",
+       "      <td>[Intentional self-harm (suicide) by other and ...</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>85</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         State  State Code                              ICD-10 113 Cause List  \\\n",
+       "20891  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20892  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20893  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20894  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20895  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20896  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20897  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20898  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "20899  Alabama         1.0  #Intentional self-harm (suicide) (*U03,X60-X84...   \n",
+       "\n",
+       "      Ten-Year Age Groups Ten-Year Age Groups Code  Deaths  Population  \\\n",
+       "20891          5-14 years                     5-14    10.0    608466.0   \n",
+       "20892         15-24 years                    15-24    94.0    635707.0   \n",
+       "20893         25-34 years                    25-34   129.0    647229.0   \n",
+       "20894         35-44 years                    35-44   157.0    593306.0   \n",
+       "20895         45-54 years                    45-54   137.0    616616.0   \n",
+       "20896         55-64 years                    55-64   119.0    657667.0   \n",
+       "20897         65-74 years                    65-74    84.0    501447.0   \n",
+       "20898         75-84 years                    75-84    51.0    256847.0   \n",
+       "20899           85+ years                      85+    23.0     91543.0   \n",
+       "\n",
+       "       Crude Rate   Rate  Child_Adj_Rate common_name  \\\n",
+       "20891  Unreliable   1.64            1.64     Suicide   \n",
+       "20892        14.8  14.79           14.79     Suicide   \n",
+       "20893        19.9  19.93           19.93     Suicide   \n",
+       "20894        26.5  26.46           26.46     Suicide   \n",
+       "20895        22.2  22.22           22.22     Suicide   \n",
+       "20896        18.1  18.09           18.09     Suicide   \n",
+       "20897        16.8  16.75           16.75     Suicide   \n",
+       "20898        19.9  19.86           19.86     Suicide   \n",
+       "20899        25.1  25.12           25.12     Suicide   \n",
+       "\n",
+       "                                                children parents  Start Age  \n",
+       "20891  [Intentional self-harm (suicide) by other and ...      []          5  \n",
+       "20892  [Intentional self-harm (suicide) by other and ...      []         15  \n",
+       "20893  [Intentional self-harm (suicide) by other and ...      []         25  \n",
+       "20894  [Intentional self-harm (suicide) by other and ...      []         35  \n",
+       "20895  [Intentional self-harm (suicide) by other and ...      []         45  \n",
+       "20896  [Intentional self-harm (suicide) by other and ...      []         55  \n",
+       "20897  [Intentional self-harm (suicide) by other and ...      []         65  \n",
+       "20898  [Intentional self-harm (suicide) by other and ...      []         75  \n",
+       "20899  [Intentional self-harm (suicide) by other and ...      []         85  "
+      ]
+     },
+     "execution_count": 169,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n"
+    "df\n"
    ]
   },
   {
@@ -18254,14 +18500,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_age_box(cod, state):\n",
+    "    df = load_state_cod(\"All\")\n",
+    "    df = df[df[\"ICD-10 113 Cause List\"] == cod]\n",
+    "    df[\"Start Age\"] = df[\"Ten-Year Age Groups Code\"].str.split(\"-\").str[0].str.replace(\"+\",\"\")\n",
+    "    df[\"Start Age\"] = df[\"Start Age\"].astype(int)\n",
+    "\n",
+    "    df = df.sort_values(by=[\"Start Age\"])\n",
+    "\n",
+    "    fig = px.box(df, x=\"Ten-Year Age Groups Code\", y=\"Rate\", color=\"Ten-Year Age Groups Code\", hover_data=[\"State\", \"ICD-10 113 Cause List\"])\n",
+    "\n",
+    "    df = df[df[\"State\"] == state]\n",
+    "    fig.add_trace(go.Scatter(\n",
+    "        x = df[\"Ten-Year Age Groups Code\"],\n",
+    "        y=df[\"Rate\"],\n",
+    "        mode = \"markers+lines\",\n",
+    "        marker=dict(color = \"red\"),\n",
+    "        name = state\n",
+    "\n",
+    "    ))\n",
+    "    fig.update_layout(height=300,width=1000, plot_bgcolor='rgba(0,0,0,0)', margin=dict(l=0, r=0, t=25, b=0))\n",
+    "\n",
+    "    fig.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 165,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\zeusg\\AppData\\Local\\Temp/ipykernel_38384/1163915242.py:3: FutureWarning:\n",
+      "C:\\Users\\zeusg\\AppData\\Local\\Temp/ipykernel_38384/3154559306.py:4: FutureWarning:\n",
       "\n",
       "The default value of regex will change from True to False in a future version. In addition, single character regular expressions will *not* be treated as literal strings when regex=True.\n",
       "\n"
@@ -20901,7 +21177,7 @@
           "color": "red"
          },
          "mode": "markers+lines",
-         "name": "Alabama",
+         "name": "Michigan",
          "type": "scatter",
          "x": [
           "5-14",
@@ -20915,20 +21191,21 @@
           "85+"
          ],
          "y": [
-          1.64,
-          14.79,
-          19.93,
-          26.46,
-          22.22,
-          18.09,
-          16.75,
-          19.86,
-          25.12
+          2.17,
+          13.27,
+          19.21,
+          18.61,
+          20.96,
+          19.01,
+          13.01,
+          19.62,
+          16.89
          ]
         }
        ],
        "layout": {
         "boxmode": "overlay",
+        "height": 300,
         "legend": {
          "title": {
           "text": "Ten-Year Age Groups Code"
@@ -20936,8 +21213,12 @@
          "tracegroupgap": 0
         },
         "margin": {
-         "t": 60
+         "b": 0,
+         "l": 0,
+         "r": 0,
+         "t": 25
         },
+        "plot_bgcolor": "rgba(0,0,0,0)",
         "template": {
          "data": {
           "bar": [
@@ -21755,6 +22036,7 @@
           }
          }
         },
+        "width": 1000,
         "xaxis": {
          "anchor": "y",
          "categoryarray": [
@@ -21795,25 +22077,7 @@
     }
    ],
    "source": [
-    "df = load_state_cod(\"All\")\n",
-    "df = df[df[\"ICD-10 113 Cause List\"] == \"#Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)\"]\n",
-    "df[\"Start Age\"] = df[\"Ten-Year Age Groups Code\"].str.split(\"-\").str[0].str.replace(\"+\",\"\")\n",
-    "df[\"Start Age\"] = df[\"Start Age\"].astype(int)\n",
-    "\n",
-    "df = df.sort_values(by=[\"Start Age\"])\n",
-    "\n",
-    "fig = px.box(df, x=\"Ten-Year Age Groups Code\", y=\"Rate\", color=\"Ten-Year Age Groups Code\", hover_data=[\"State\", \"ICD-10 113 Cause List\"])\n",
-    "\n",
-    "df = df[df[\"State\"] == \"Alabama\"]\n",
-    "fig.add_trace(go.Scatter(\n",
-    "    x = df[\"Ten-Year Age Groups Code\"],\n",
-    "    y=df[\"Rate\"],\n",
-    "    mode = \"markers+lines\",\n",
-    "    marker=dict(color = \"red\"),\n",
-    "    name = \"Alabama\"\n",
-    "    \n",
-    "))\n",
-    "fig.show()"
+    "get_age_box(\"#Intentional self-harm (suicide) (*U03,X60-X84,Y87.0)\", \"Michigan\")"
    ]
   },
   {
