--- a/Notebooks/LoadDB.ipynb
+++ b/Notebooks/LoadDB.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,6 +26,77 @@
     "import GraphGenerator\n",
     "import CleanData"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Div(children=Graph(id='CauseOfDeathBoxPlot', figure=Figure({\n",
+       "    'data': [{'boxpoints': 'all',\n",
+       "              'hovertext': array(['WV', 'AR', 'AL', 'MS', 'OK', 'MI', 'OH', 'PA', 'TN', 'MO', 'KY', 'LA',\n",
+       "                                  'FL', 'IA', 'DE', 'VT', 'IN', 'ME', 'RI', 'NV', 'NY', 'SC', 'KS', 'WI',\n",
+       "                                  'SD', 'MT', 'IL', 'NJ', 'MD', 'CT', 'NM', 'NC', 'ND', 'NH', 'HI', 'NE',\n",
+       "                                  'GA', 'OR', 'VA', 'WY', 'AZ', 'DC', 'MA', 'ID', 'CA', 'WA', 'MN', 'TX',\n",
+       "                                  'CO', 'UT', 'AK'], dtype=object),\n",
+       "              'jitter': 0.3,\n",
+       "              'name': 'Major cardiovascular diseases ',\n",
+       "              'pointpos': -1.8,\n",
+       "              'type': 'box',\n",
+       "              'x': array([372.29, 358.64, 358.26, 353.75, 339.78, 328.31, 326.14, 322.53, 316.13,\n",
+       "                          310.26, 308.64, 307.15, 305.46, 304.59, 289.8 , 287.51, 287.22, 286.64,\n",
+       "                          285.83, 281.74, 278.71, 277.56, 274.26, 273.06, 270.84, 270.5 , 269.3 ,\n",
+       "                          268.08, 263.79, 261.89, 258.53, 254.36, 254.18, 254.17, 251.93, 244.  ,\n",
+       "                          243.27, 242.71, 238.15, 237.23, 233.09, 228.41, 224.23, 222.1 , 220.52,\n",
+       "                          212.86, 211.02, 209.73, 182.38, 158.3 , 155.42])}],\n",
+       "    'layout': {'autosize': False,\n",
+       "               'height': 200,\n",
+       "               'margin': {'b': 0, 'l': 0, 'pad': 0, 'r': 0, 't': 0},\n",
+       "               'shapes': [{'line': {'color': 'green', 'dash': 'dash', 'width': 3},\n",
+       "                           'type': 'line',\n",
+       "                           'x0': 328.31,\n",
+       "                           'x1': 328.31,\n",
+       "                           'xref': 'x',\n",
+       "                           'y0': 0,\n",
+       "                           'y1': 1,\n",
+       "                           'yref': 'y domain'}],\n",
+       "               'template': '...',\n",
+       "               'width': 800}\n",
+       "})), id='CauseOfDeathBoxPlot_parent', className='span6')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "GraphGenerator.state_cod_tree_plot()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
